--- a/Sources/Guestbook/Guestbook.API/Index.html
+++ b/Sources/Guestbook/Guestbook.API/Index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 
 <head>
-    <title>Guestbook.Silverlight</title>
+    <title>Guestbook</title>
     <style type="text/css">
     html, body {
 	    height: 100%;
